# The-Evolution-of-Todo

./: .gitignore  Dockerfile  README.md  pyproject.toml  run_backend.py  test_path.py
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: CLAUDE.md  auth.py  main.py  migrate.py  requirements.txt  schemas.py
backend/routes/: auth.py
backend/services/: task_service.py
history/prompts/1-fastapi-backend/: 1-backend-implementation-plan.plan.prompt.md  1-backend-tasks-generation.tasks.prompt.md
history/prompts/1-frontend-completion/: 001-frontend-completion-implementation.general.prompt.md  002-frontend-correction-completion.general.prompt.md  1-frontend-completion-spec.spec.prompt.md  2-frontend-completion-plan.plan.prompt.md  3-frontend-completion-tasks.tasks.prompt.md
history/prompts/1-full-stack-todo/: 1-full-stack-todo-specification.spec.prompt.md
phase_2_web/backend/: .gitignore  README.md  db.py  main.py  models.py  settings.py  verify_tables.py
phase_2_web/frontend/: next.config.js  package-lock.json  package.json  tmpclaude-b287-cwd  tmpclaude-cac0-cwd  tsconfig.json  vercel.json
specs/1-fastapi-backend/: agent-context-update.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-frontend-completion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-full-stack-todo/: spec.md
specs/2-phase-separation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/in-memory-todo-console/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo/: manager.py
(+91 files in other folders)
